# claude-notifier

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
claude-notifier-macos/: Makefile  README.md
claude-notifier-macos/src/: ClaudeNotifier.swift
claude-notifier-windows/: Cargo.toml  README.md  build.rs
claude-notifier-windows/scripts/: install.ps1
claude-notifier-windows/src/: cli.rs  main.rs  registration.rs  sound.rs  toast.rs
examples/: stop-check.sh  stop-check.ts
resources/: AppIcon.icns  Info.plist
scripts/: notify-remote.sh
src/: ClaudeNotifier.swift
