[package]
name = "claude-notifier"
version = "1.0.0"
edition = "2021"
authors = ["Claude Notifier Contributors"]
description = "Windows native notification tool for Claude Code"
license = "MIT"
repository = "https://github.com/zengwenliang416/claude-notifier"
keywords = ["notification", "windows", "toast", "claude"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
directories = "5"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Foundation",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Storage",
    "Media_Playback",
    "Media_Core",
] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
